# paidy-project

./: .gitignore  README.md  openapi.yaml
client/: Cargo.toml
client/src/: client.rs  client_function_interface.rs  client_functions.rs  lib.rs  main.rs  sim.rs  web_connection.rs
client/tests/: client_function_tests.rs  mock_client_function_interface.rs  mock_web_connection.rs  simulator_tests.rs
server/: Cargo.toml
server/src/: database_connection.rs  endpoints.rs  lib.rs  main.rs  rest_bodies.rs  rest_responses.rs  server_errors.rs  server_functions.rs
server/src/errors/: database_setup_error.rs  mod.rs  server_error.rs
server/tests/: endpoint_tests.rs  integration_tests.rs  mock_database_connector.rs  server_functions_tests.rs
src/: client.rs  main.rs
